2009-09-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-url-current-buffer): Renamed.
	(tinydebian-bug-url): New. Call `tinydebian-bug-url-current-buffer'.
	(tinydebian-bug-gnu-savannah-site-support-p): Add nongnu.org site
	regexp.

2009-09-10  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-find-function-list): Correct indentation.
	(tinylisp-get-buffer-create): New.

2009-09-09  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-system-info-os-architecture):
	Use --print-architecture instead of obsolete
	--print-installation-architecture.
	(tinydebian-bug-system-info-os): Check empty locale.
	(tinydebian-bug-system-info-locale): Add LANG.
	(tinydebian-bug-system-info-os-version): Do not
	return any default value.
	(tinydebian-bug-report-mail): Remove double from docstring.
	(tinydebian-:bin-apt-cache): New.
	(tinydebian-bug-system-info-apt-cache-policy-parse-priority): New.
	(tinydebian-bug-system-info-apt-cache-policy-parse-pinned): New.
	(tinydebian-bug-system-info-apt-cache-policy-parse-release): New.
	(tinydebian-bug-system-info-apt-prefer): New.
	(tinydebian-bug-system-info-apt-cache-policy-parse-priority-str): New.
	(tinydebian-bug-system-info-apt-policy): New.
	(tinydebian-bug-system-info-apt-policy-debian): New.
	(tinydebian-bug-system-info-apt-policy): New.
	(tinydebian-bug-system-info-os): Add APT Prefers, APT policy.

2009-09-05  Jari Aalto  <jari.aalto@cante.net>

	* other/folding.el
	Modernize all macros.
	(folding-narrow-by-default): Move variable
	definition before `folding-advice-instantiate' which
	refers to it.
	(folding-font-lock-support): Use standard `let'.
	(folding-font-lock-support-instantiate): Use standard `let'.
	(folding-toggle-enter-exit): Adjust docstring.
	(fold-marks-kill): Use `destructuring-bind', not
	`multiple-value-bind', avoiding problems on XEmacs version.
	(folding-font-lock-keywords): Use `destructuring-bind'.